separate logic, some refactoring

--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="cssreset-min.css">
         <link rel="stylesheet" href="popup.css">
+        <script type="text/javascript" src="scripts/utils.js"></script>
         <script type="text/javascript" src="scripts/lstorage.js"></script>
         <script type="text/javascript" src="scripts/popup.js"></script>
     </head>
@@ -24,7 +25,7 @@
                         <p class="time-total"></p>
                     </div>
                     <div class="time-current">
-                        #5432 Start with new point.
+                        
                     </div>
                     <div class="time-history">
                         
