--- a/chrome/background.html
+++ b/chrome/background.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="credentials.js"></script>
+    <script type="text/javascript" src="scripts/utils.js"></script>
+    <script type="text/javascript" src="scripts/logger.js"></script>
     <script type="text/javascript" src="scripts/lstorage.js"></script>
     <script type="text/javascript" src="scripts/rserver.js"></script>
     <script type="text/javascript" src="scripts/background.js"></script>
